variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: Missing closing brace `}' assumed here
var nbpas: int =0()
^Variables:1: error: Missing closing brace `}' assumed here
var nbpas: int =0()
^Variables:1: error: expected class or object definition
var nbpas: int =0()
^Variables:2: error: expected class or object definition
while (!estSurBiscuit()){
^